# openelis-mongolia

./: .dockerignore  .env  .gitignore  .gitmodules  .sdkmanrc  AGENTS.md  CLAUDE.md  CLOUD_DEPLOYMENT_GUIDE.md  Dockerfile  Dockerfile.dev  IMPORT_INSTRUCTIONS.md  LICENSE.md  MONGOLIAN_SETUP_DONE.md  Mongol-PO-Run-guide.md  README.md  REBRANDING_GUIDE.md  build.docker-compose.yml  dev.docker-compose.yml  docker-compose.letsencrypt.yml  docker-compose.lis.yml  docker-compose.yml  en.json  pom.xml  sample_import.csv  sample_import_template.csv
.dev-docs/: LETSENCRYPT_SETUP.md  original-spec.md  spec-driven-dev.md  speckit-specify-prompt-v2.md
.github/: PULL_REQUEST_TEMPLATE.md
.tx/: config
db/: Dockerfile
docs/: 27upgrade.md  AI_API_GUIDE.md  ARCHITECTURE_ANALYSIS.md  B2B_INTEGRATION_GUIDE.md  MONGOLIAN_LOCALIZATION_GUIDE.md  add_dr.md  astm.md  backups.md  certificate-setup-report.md  cs-build.md  csbuild.md  dbprofiles.md  deployomrs.md  dev.md  dev_setup.md  directFHIRCommunication.md  implementation.md  index.md  install.md  troubleshooting.md
projects/catalyst/catalyst-agents/: Dockerfile  README.md  pyproject.toml
projects/catalyst/catalyst-agents/src/: __init__.py  a2a_endpoints.py  config.py  llm_clients.py  mcp_client.py
projects/catalyst/catalyst-agents/src/agent_cards/: catalyst.json  router.json
projects/catalyst/catalyst-agents/src/agents/: __init__.py  catalyst_executor.py  catalyst_server.py  router_executor.py  router_server.py
projects/catalyst/catalyst-agents/tests/: __init__.py  test_catalyst_agent.py  test_integration.py  test_router.py
projects/catalyst/catalyst-gateway/: Dockerfile  README.md  pyproject.toml
projects/catalyst/catalyst-gateway/src/: __init__.py  a2a_client.py  config.py  gateway.py
projects/catalyst/catalyst-gateway/tests/: test_gateway.py
projects/catalyst/catalyst-mcp/: Dockerfile  README.md  pyproject.toml
projects/catalyst/catalyst-mcp/src/: __init__.py  config.py  server.py
projects/catalyst/catalyst-mcp/src/db/: __init__.py
projects/catalyst/catalyst-mcp/src/tools/: __init__.py  schema_tools.py
projects/catalyst/catalyst-mcp/tests/: test_mcp_tools.py
(+1300 files in other folders)
